# FdF_42

./: .gitmodules  42cp.fdf  CMakeLists.txt  Makefile  fdf
fdf.dSYM/Contents/Resources/DWARF/: fdf
ft_printf/: Makefile  color_work.c  double.c  double1.c  double2.c  ft_char.c  ft_printf.c  ft_printf.h  ft_unsigneditoa_base.c  list_filling_functions.c  list_functions.c  output.c  output_bits.c  output_digital.c  parsing.c  pointer.c  string.c  usage_flags.c
ft_printf/libft/: Makefile  error.c  ft_abs.c  ft_arrdel.c  ft_atoi.c  ft_dlstadd.c  ft_dlstappend.c  ft_dlstiter.c  ft_dlstnew.c  ft_dlstpurge.c  ft_dlstsize.c  ft_dpow.c  ft_error.c  ft_get_next_line.c  ft_ipow.c  ft_is_hex.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstappend.c  ft_lstdelete.c  ft_lstdelone.c  ft_lstextend.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpop.c  ft_lstpopback.c  ft_lstpurge.c  ft_lstsize.c  ft_max.c  ft_maxn.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  (+51 more)
ft_printf/libft/includes/: libft.h
includes/: fdf.h
sources/: costyl.c  draw_line_with_grad.c  draw_matrix_on_iso.c  drawing_lines.c  drawing_matrix.c  fdf.c  fdf.h  keyboard.c  list_functions.c  menu.c  mouse.c  one_line.c  parsing.c  point_functions.c  point_list_functions.c  treatment_of_signals.c  work_with_angle_consistent.c  work_with_angles.c
